--- a/style/main.css
+++ b/style/main.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
 :root{
     --vermelho:#ea0000
 }
@@ -28,5 +29,125 @@ header .container{
     background-color:var(--vermelho);
 }
 
+/*Sidebar*/
+
+.wrapper{
+    height: 30%;
+    width: 50px;
+    position:relative;
+}
+
+.wrapper .menu-btn{
+    position: absolute;
+    left: 20px;
+    top: -30px;
+    color: white;
+    height: 60px;
+    width: 20px;
+    z-index: 9999;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease;
+}
+
+/*#btn:checked ~ .menu-btn{
+    left: 150px;
+}*/
+
+.wrapper .menu-btn i{
+    position: absolute;
+ 
+    font-size: 23px;
+    transition: all 0.3s ease;
+  }
 
 
+  #btn:checked ~ .menu-btn i.fa-bars{
+    opacity: 0;
+    transform: rotate(180deg);
+  }
+
+  #sidebar{
+    position: fixed;
+    background: black;
+    height: 100%;
+    width: 70%;
+    overflow: hidden;
+    left: -270px;
+    top:-1px;
+    transition: all 0.3s ease;
+  }
+
+  #btn:checked ~ #sidebar{
+    left: 0;
+  }
+
+  #sidebar .title{
+     padding: 12%;
+    background: black;
+
+  }
+  #sidebar .list-items{
+    position: relative;
+    background: black;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+  }
+  #sidebar .list-items li{
+    padding-left: 20px;
+    line-height: 40px;
+    transition: all 0.3s ease;
+  }
+  #sidebar .list-items li:hover{
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    box-shadow: 0 0px 10px 3px yellow;
+  }
+  #sidebar .list-items li:first-child{
+    border-top: none;
+  }
+  #sidebar .list-items li a{
+    color: #f2f2f2;
+    text-decoration: none;
+    font-size: 15px;
+    height: 100%;
+    width: 100%;
+    display: block;
+  }
+  #sidebar .list-items li a i{
+    margin-right: 20px;
+  }
+  #sidebar .list-items .icons{
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    position: absolute;
+    bottom: 97px;
+    line-height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  #sidebar .list-items .icons a{
+    height: 100%;
+    width: 40px;
+    display: block;
+    margin: 0 5px;
+    font-size: 18px;
+    color: black;
+    background: yellow;
+    border-radius: 5px;
+    border: 1px solid #ffd900;
+    transition: all 0.3s ease;
+  }
+  
+  .list-items .icons a:first-child{
+    margin-left: 0px;
+  }
+ 
+  /*Sidebar*/
+  
+  
