--- a/style/main.css
+++ b/style/main.css
@@ -15,6 +15,10 @@
     text-decoration: none;
 }
 
+
+
+
+
 body{
     
     font-family: 'Arial', 'Times New Roman', Times, serif;
@@ -138,9 +142,14 @@ header .container{
     width: 100%;
     display: block;
   }
-  #sidebar .list-items li a i{
-    margin-right: 20px;
+  #sidebar .list-items li a .icons-sidebar{
+    margin-right: 25px;
+    width: 31px;
+    height: auto;
   }
+
+ 
+
   #sidebar .list-items .icons{
     width: 100%;
     height: 40px;
